--- a/style.css
+++ b/style.css
@@ -8,19 +8,22 @@ body{
   background-color: #f4f4fc 
 }
 
-header{ width: 100%;
+header{ 
+  width: 100%;
   height: 70px;
   
 }
 
-.logo_a{ width: 100px;
+.logo_a{ 
+  width: 100px;
   height: 50px;
   padding-top: 20px;
   padding-left 40px;
 
 }
 
-main{ position: absolute;
+main{ 
+  position: absolute;
   width: 100%;
   height: 90%;
   display: flex;
