--- a/style.css
+++ b/style.css
@@ -1,37 +1,34 @@
-*{
+* {
     margin: 0;
-    padding:  0;
+    padding: 0;
     font-family: 'Inter', sans-serif;
 }
 
-body{
-  background-color: #f4f4fc 
+body {
+    background-color: #f4f4fc;
 }
 
-header{ 
-  width: 100%;
-  height: 70px;
-  
+header {
+    width: 100%;
+    height: 70px;
 }
 
-.logo_a{ 
-  width: 100px;
-  height: 50px;
-  padding-top: 20px;
-  padding-left 40px;
-
+.logo {
+    width: 100px;
+    height: 50px;
+    padding-top: 20px;
+    padding-left: 40px;
 }
 
-main{ 
-  position: absolute;
-  width: 100%;
-  height: 90%;
-  display: flex;
-  justify-content: space-between;
-
+main {
+    position: absolute;
+    width: 100%;
+    height: 90%;
+    display: flex;
+    justify-content: space-between;
 }
 
-.caja_texto{
+.contenedorcajatexto {
     position: absolute;
     left: 200px;
     top: 100px;
@@ -40,7 +37,7 @@ main{
     height: 600px;
 }
 
-.espacio_texto{
+.cajatexto {
     width: 80%;
     height: 100%;
     border: none;
@@ -52,11 +49,11 @@ main{
     font-family: 'Inter', sans-serif;
 }
 
-.espacio_texto::placeholder{
+.cajatexto::placeholder {
     color: #0A3871;
 }
 
-.boton_alerta{
+.alerta {
     position: absolute;
     top: 750px;
     left: 370px;
@@ -64,7 +61,7 @@ main{
     color: #495057;
 }
 
-.botones{
+.contenedor-botones {
     position: absolute;
     top: 800px;
     height: 80px;
@@ -72,7 +69,7 @@ main{
     padding-top: 15px;
 }
 
-.boton_encriptar{
+.btn-encriptar {
     width: 328px;
     height: 67px;
     border-radius: 24px;
@@ -86,7 +83,7 @@ main{
     cursor: pointer;
 }
 
-.boton_dencriptar{
+.btn-desencriptar {
     width: 328px;
     height: 67px;
     border-radius: 24px;
@@ -99,7 +96,20 @@ main{
     cursor: pointer;
 }
 
-.logo_b{
+.seccion2 {
+    display: block;
+    position: relative;
+    width: 400px;
+    height: 840px;
+    right: 200px;
+    padding-right: 20px;
+    background-color: #ffffff;
+    box-sizing: border-box;
+    border-radius: 32px;
+    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.50);
+}
+
+.contenedormunieco {
     position: absolute;
     left: 30px;
     top: 180px;
@@ -107,14 +117,14 @@ main{
     padding-top: 50px;
 }
 
-.mensaje{
+.contenedor-parrafo {
     position: absolute;
     box-sizing: border-box;
     top: 570px;
     left: 40px;
- }
+}
 
- .mensaje h3{
+.contenedor-parrafo h3 {
     font-size: 24px;
     font-weight: 700;
     font-family: 'Inter', sans-serif;
@@ -122,7 +132,7 @@ main{
     color: #343A40;
 }
 
-.mensaje p{
+.contenedor-parrafo p {
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     font-size: 16px;
@@ -131,7 +141,7 @@ main{
     padding-top: 20px;
 }
 
-.contenedor_resultado{
+.contenedor-resultado {
     position: absolute;
     bottom: 330px;
     width: 320px;
@@ -141,12 +151,12 @@ main{
     margin-left: 25px;
 }
 
-.contenedor_resultado p{
+.contenedor-resultado p {
     color: #495057;
     font-size: 25px;
 }
 
-.copiar{
+.contenedor-copiar {
     display: flex;
     position: absolute;
     bottom: 400px;
@@ -155,7 +165,7 @@ main{
     padding-left: 40px;
 }
 
-.boton_copiar{
+.btn-copiar {
     width: 328px;
     height: 67px;
     border-radius: 24px;
@@ -171,6 +181,6 @@ main{
     right: 4px;
 }
 
-.ocultar{
+.ocultar {
     display: none;
 }
