--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ main {
     padding-top: 15px;
 }
 
-.btn-encriptar {
+.boton_encriptar {
     width: 328px;
     height: 67px;
     border-radius: 24px;
@@ -83,7 +83,7 @@ main {
     cursor: pointer;
 }
 
-.btn-desencriptar {
+.boton_dencriptar {
     width: 328px;
     height: 67px;
     border-radius: 24px;
