--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header {
     height: 70px;
 }
 
-.logo {
+.logo_a {
     width: 100px;
     height: 50px;
     padding-top: 20px;
@@ -151,7 +151,7 @@ main {
     margin-left: 25px;
 }
 
-.contenedor-resultado p {
+.contenedor_resultado p {
     color: #495057;
     font-size: 25px;
 }
