--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Estilos para computadoras */
 * {
     margin: 0;
     padding: 0;
@@ -176,33 +177,72 @@ main {
     font-family: 'Inter', sans-serif;
     border: 1px solid #0A3871;
     cursor: pointer;
-    position: relative;
-    top: 50px;
-    right: 4px;
 }
 .ocultar {
     display: none;
 }
 
+/* Estilos para dispositivos móviles */
+@media screen and (max-width: 480px) {
+    main {
+        height: auto; /* Cambiado para dispositivos móviles */
+    }
 
-@media only screen and (max-width: 600px) {
-  .caja_texto {
-    left: 20px;
-    width: calc(100% - 40px);
-  }
-}
+    .caja_texto {
+        position: relative;
+        left: auto;
+        top: 20px;
+        padding-left: 0;
+        width: 90%;
+        max-width: 400px;
+    }
 
-@media only screen and (max-width: 600px) {
-  .boton_encriptar,
-  .boton_dencriptar,
-  .boton_copiar {
-    width: 100%;
-    margin-bottom: 10px; /* Espacio entre botones */
-  }
-}
+    .espacio_texto {
+        font-size: 24px;
+    }
 
-@media only screen and (max-width: 600px) {
-  .seccion2 {
-    display: none;
-  }
-}
+    .botones {
+        position: relative;
+        top: 20px;
+        height: auto;
+        padding-left: 0;
+        padding-top: 10px;
+        flex-direction: column;
+    }
+
+    .boton_encriptar,
+    .boton_dencriptar {
+        width: 100%;
+        height: 50px;
+        margin-bottom: 10px;
+    }
+
+    .seccion2 {
+        width: 90%;
+        max-width: 400px;
+        margin-top: 20px;
+        padding: 20px;
+    }
+
+    .mensaje {
+        width: 100%;
+        margin-top: 20px;
+    }
+
+    .contenedor-resultado {
+        margin-top: 20px;
+    }
+
+    .copiar {
+        width: 90%;
+        max-width: 400px;
+        margin-top: 20px;
+        padding: 10px;
+        justify-content: center;
+    }
+
+    .boton_copiar {
+        width: 100%;
+        height: 50px;
+    }
+
