--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Estilos para computadoras */
+/* Estilos para PC */
 * {
     margin: 0;
     padding: 0;
@@ -157,7 +157,7 @@ main {
     font-size: 25px;
 }
 
-.copiar{
+.copiar {
     display: flex;
     position: absolute;
     bottom: 400px;
@@ -166,7 +166,7 @@ main {
     padding-left: 40px;
 }
 
-.boton_copiar{
+.boton_copiar {
     width: 328px;
     height: 67px;
     border-radius: 24px;
@@ -177,72 +177,73 @@ main {
     font-family: 'Inter', sans-serif;
     border: 1px solid #0A3871;
     cursor: pointer;
+    position: relative;
+    top: 50px;
+    right: 4px;
 }
+
 .ocultar {
     display: none;
 }
 
 /* Estilos para dispositivos móviles */
 @media screen and (max-width: 480px) {
-    main {
-        height: auto; /* Cambiado para dispositivos móviles */
-    }
-
     .caja_texto {
-        position: relative;
-        left: auto;
-        top: 20px;
-        padding-left: 0;
-        width: 90%;
-        max-width: 400px;
+        left: 20px;
+        width: calc(100% - 40px);
+        height: 300px;
+        top: 150px;
     }
 
-    .espacio_texto {
-        font-size: 24px;
+    .boton_alerta {
+        position: absolute;
+        top: 470px;
+        left: 20px;
+        width: calc(100% - 40px);
+        text-align: center;
     }
 
     .botones {
-        position: relative;
-        top: 20px;
+        position: absolute;
+        top: 540px;
         height: auto;
-        padding-left: 0;
-        padding-top: 10px;
-        flex-direction: column;
+        padding: 0 20px;
+        width: calc(100% - 40px);
+        text-align: center;
     }
 
     .boton_encriptar,
     .boton_dencriptar {
-        width: 100%;
-        height: 50px;
-        margin-bottom: 10px;
-    }
-
-    .seccion2 {
-        width: 90%;
-        max-width: 400px;
-        margin-top: 20px;
-        padding: 20px;
+        width: calc(50% - 10px);
+        margin: 5px;
     }
 
     .mensaje {
-        width: 100%;
-        margin-top: 20px;
+        position: absolute;
+        top: 630px;
+        left: 20px;
+        width: calc(100% - 40px);
     }
 
     .contenedor-resultado {
-        margin-top: 20px;
+        position: absolute;
+        bottom: 30px;
+        width: calc(100% - 40px);
+        margin-left: 20px;
     }
 
     .copiar {
-        width: 90%;
-        max-width: 400px;
-        margin-top: 20px;
-        padding: 10px;
-        justify-content: center;
+        position: absolute;
+        top: 390px;
+        width: calc(100% - 40px);
+        padding-left: 20px;
     }
 
     .boton_copiar {
-        width: 100%;
-        height: 50px;
+        width: calc(100% - 40px);
     }
 
+    .logo_b {
+        display: none;
+    }
+}
