--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@ main {
 
 
     .boton_copiar {
-        width: calc(100% - 40px);
+        width: 200px;
         height: 69px;
         border-radius: 24px;
         background-color: #ffffff;
@@ -288,7 +288,7 @@ main {
         border: 1px solid #0A3871;
         cursor: pointer;
         position: relative;
-        top: -410px;
+        top: -220px;
         right: 4px;
     }
 
