--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ main {
         padding: 288px; 
         border-radius: 20px; 
         box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.1);
-        margin-top: 1000px; 
+        margin-top: 850px; 
         padding-left: 10%;
     }
      .espacio_texto {
@@ -295,4 +295,12 @@ main {
     .logo_b {
         display: none;
     }
+  
+  .botones {
+    position: absolute;
+    top: 668px;
+    height: 80px;
+    padding-left: 15%;
+    padding-top: 15px;
+}
 }
